Changes: Fix the toolbar button label truncation in portrait mode (NB#185876)
RevBy: TrustMe
Details: I tested the fix with verious languages described in the bug
report. The new implementation sets correct size for landscape mode as well.

--- a/m-keyboard/theme/libmeego-keyboard.css
+++ b/m-keyboard/theme/libmeego-keyboard.css
@@ -412,9 +412,7 @@ MToolbarButtonStyle {
     margin-right: $MARGIN_SMALL;
     margin-top: 0;
     margin-bottom: 0;
-    minimum-size:   20% $HEIGHT_TOOLBARITEM;
-    preferred-size: 20% $HEIGHT_TOOLBARITEM;
-    maximum-size:   20% $HEIGHT_TOOLBARITEM;
+    maximum-size:   40% $HEIGHT_TOOLBARITEM;
     /*below reactive margins should be fixed*/
 /*  reactive-margin-left: 2;
     reactive-margin-right: 2;
